deploy: d77f35688eaf99d6c548fa19bc7860c803dc062d

--- a/appendix-01-keywords.html
+++ b/appendix-01-keywords.html
@@ -172,7 +172,7 @@
 <h3><a class="header" href="#目前有在使用的關鍵字" id="目前有在使用的關鍵字">目前有在使用的關鍵字</a></h3>
 <p>以下爲目前的關鍵字與其對應的功能描述。</p>
 <ul>
-<li><code>as</code> - 進行原始型態轉換、消除包含項目的特定特徵，或重新命名 <code>use</code> 與 <code>extern crate</code> 陳述式內的項目</li>
+<li><code>as</code> - 進行原始型別轉換、消除包含項目的特定特徵，或重新命名 <code>use</code> 與 <code>extern crate</code> 陳述式內的項目</li>
 <li><code>async</code> -  回傳 <code>Future</code> 而非阻擋目前執行緒</li>
 <li><code>await</code> - 暫停執行直到 <code>Future</code> 的結果已經準備好</li>
 <li><code>break</code> - 立即離開迴圈</li>
