--- a/ch04-01-what-is-ownership.html
+++ b/ch04-01-what-is-ownership.html
@@ -217,7 +217,7 @@
 <p>目前爲止，變數何時有效與作用域的關係都還跟其他程式語言相似。現在我們要以此基礎來介紹 <code>String</code> 型別</p>
 <h3><a class="header" href="#string-型別" id="string-型別"><code>String</code> 型別</a></h3>
 <p>要能夠解釋所有權規則，我們需要使用比第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore -->介紹過的還複雜的型別才行。之前我們提到的型別都是儲存在堆疊上的，在作用域結束時就會從堆疊中彈出。但是我們想要觀察的是儲存在堆積上的資料，並研究 Rust 是如知道要清理資料的。</p>
-<p>我們會使用 <code>String</code> 最爲範例並專注在 <code>String</code> 與所有權有關的部分。這些部分也適用於其他基本函式庫或你自己定義的複雜資料型態。我們會在第八章更深入探討 <code>String</code>。</p>
+<p>我們會使用 <code>String</code> 最爲範例並專注在 <code>String</code> 與所有權有關的部分。這些部分也適用於其他基本函式庫或你自己定義的複雜資料型別。我們會在第八章更深入探討 <code>String</code>。</p>
 <p>我們已經看過字串字面值，字串的數值是寫死在我們的程式內的。字串字面值的確很方便，但他不可能完全適用於我們使用文字時的所有狀況。其中一個原因是因爲它是不可變的，另一個原因是並非所有字串值在我們編寫程式時就會知道。舉裡來說，要是我們想要收集使用者的輸入並儲存它呢？對於這些情形，Rust 提供第二種字串型別 <code>String</code>。此型別是分配在堆積上的，所以可以儲存我們在編譯期間未知的一些文字。你可以建議從字串字面值使用 <code>from</code> 函式來建立一個 <code>String</code>，如以下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
