--- a/ch05-02-example-structs.html
+++ b/ch05-02-example-structs.html
@@ -326,7 +326,7 @@ rect1 is Rectangle {
     height: 50,
 }
 </code></pre>
-<p>Rust 提供了一些特徵並讓我們可以用 <code>derive</code> 標記來爲自定型態加入些實用的功能。這類的特徵與其行爲都列在附錄 C。我們會在第十章介紹如何定義自定特徵，且如何實作這些特徵的自訂行爲。</p>
+<p>Rust 提供了一些特徵並讓我們可以用 <code>derive</code> 標記來爲自定型別加入些實用的功能。這類的特徵與其行爲都列在附錄 C。我們會在第十章介紹如何定義自定特徵，且如何實作這些特徵的自訂行爲。</p>
 <p>我們的函式 <code>area</code> 最後就非常清楚明白了，它只會計算長方形的面積。這樣的行爲要是能夠緊貼著我們的 <code>Rectangle</code> 結構體，因爲這樣一來它就不會相容於其他型別。讓我們看看我們如何繼續重構我們的程式碼，接下來我們可以將函式 <code>area</code> 轉換爲 <code>Rectangle</code> 型別的*方法（method）*將。</p>
 <blockquote>
 <ul>
