deploy: 535173135a6edd92c9fcf246fdbc943fdaab71fe

--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -188,8 +188,8 @@ $ cd hello_world
 &gt; cd hello_world
 </code></pre>
 <h3><a class="header" href="#編寫並執行-rust-程式" id="編寫並執行-rust-程式">編寫並執行 Rust 程式</a></h3>
-<p>接著，請產生一個原始文件並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作爲結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
-<p>現在請開啟 <em>main.rs</em> 文件然而後輸入範例 1-1 中的程式碼。</p>
+<p>接著，請產生一個原始檔案並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作爲結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
+<p>現在請開啟 <em>main.rs</em> 檔案然而後輸入範例 1-1 中的程式碼。</p>
 <p><span class="filename">檔案名稱：main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     println!(&quot;Hello, world!&quot;);
@@ -206,8 +206,8 @@ Hello, world!
 &gt; .\main.exe
 Hello, world!
 </code></pre>
-<p>不管你的作業系統維和，終端機上應該都會出現 <code>Hello, world!</code>。如果你沒有看到，可以回到安裝章節中的<a href="ch01-01-installation.html#troubleshooting">「疑難排除」</a><!-- ignore -->尋求協助。</p>
-<p>如果 <code>Hello, world!</code> 有印出來，那麼恭喜你！你正式寫了一支 Rust 程式，所以你也正式成爲 Rust 開發者——歡迎加入！</p>
+<p>不管你的作業系統爲何，終端機上應該都會出現 <code>Hello, world!</code>。如果你沒有看到，可以回到安裝章節中的<a href="ch01-01-installation.html#%E7%96%91%E9%9B%A3%E6%8E%92%E9%99%A4">「疑難排除」</a><!-- ignore -->尋求協助。</p>
+<p>如果 <code>Hello, world!</code> 有印出來，那麼恭喜你！你正式寫了一支 Rust 程式，所以你也正式成爲 Rust 開發者了——歡迎加入！</p>
 <h3><a class="header" href="#分析這支-rust-程式" id="分析這支-rust-程式">分析這支 Rust 程式</a></h3>
 <p>讓我們來仔細瞧瞧你的「Hello, world!」程式實際上發生了什麼事。這是第一塊拼圖：</p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -230,8 +230,8 @@ Hello, world!
 <p>第三，<code>&quot;Hello, world!&quot;</code> 是一個字串，我們將此字串作爲引數傳遞給 <code>println!</code>，然後該字串就會被顯示到螢幕上。</p>
 <p>第四，我們用分號（<code>;</code>）作爲該行結尾，代表此表達式的結束和下一個表達式的開始。多數的 Rust 程式碼都以分號做結尾。</p>
 <h3><a class="header" href="#編譯和執行是不同的步驟" id="編譯和執行是不同的步驟">編譯和執行是不同的步驟</a></h3>
-<p>你剛剛執行了一個薪建立的程式，讓我們來檢查過程中的每一個步驟吧。</p>
-<p>在你執行一支 Rust 程式前，你必須用 Rust 編譯器來編譯它，也就是輸入 <code>rustc</code> 命令然後加上你的原始文件，像這樣子：</p>
+<p>你剛剛執行了一個新建立的程式，讓我們來檢查過程中的每一個步驟吧。</p>
+<p>在你執行一支 Rust 程式前，你必須用 Rust 編譯器來編譯它，也就是輸入 <code>rustc</code> 命令然後加上你的原始檔案，像這樣子：</p>
 <pre><code class="language-console">$ rustc main.rs
 </code></pre>
 <p>如果你已經有 C 或 C++ 的背景，你應該就會發現這和 <code>gcc</code> 或 <code>clang</code> 非常相似。編譯成功後，Rust 編譯器會輸出一個二進制執行檔（binary executable）。</p>
@@ -246,9 +246,9 @@ main.pdb
 main.rs
 </code></pre>
 <p>這顯示了副檔名爲 <em>.rs</em>  的原始碼檔案、執行檔（在 Winddows 上爲 <em>main.exe</em>；其他則爲 <em>main</em>），然後在 Windows 上會再出現一個副檔名爲 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
-<pre><code class="language-console">$ ./main # or .\main.exe on Windows
+<pre><code class="language-console">$ ./main # 在 Windows 上則是 .\main.exe
 </code></pre>
-<p>如果 <em>main.rs</em> 正是你的 “Hello, world!” 程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
+<p>如果 <em>main.rs</em> 正是你的「Hello, world!」程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
 <p>如果你比較熟悉動態語言，像是 Ruby、Python 或 JavaScript，你可能會比較不習慣將編譯與執行程式分爲兩個不同的步驟。Rust 是一門 <em>預先編譯（ahead-of-time compiled）</em> 的語言，代表你可以編譯完成後將執行檔送到其他地方，然後他們就算沒有安裝 Rust 一樣可以執行起來。但如果你給某個人 <em>.rb</em>、<em>.py</em> 或 <em>.js</em> 檔案，他們就需要 Ruby、Python 或 Javascript 分別都有安裝好。當然你在這些語言只需要一行命令就可以執行，在語言設計中這一切都只是取捨。</p>
 <p>在簡單的程式使用 <code>rustc</code> 來編譯不會有什麼問題，但當你的專案成長時，你將會需要管理所有選擇並讓程式碼易於分享。接下來我們將介紹 Cargo 這項工具給你，它將協助你寫出真正的 Rust 程式。</p>
 <blockquote>
