--- a/print.html
+++ b/print.html
@@ -425,7 +425,7 @@ main.rs
 </code></pre>
 <p>如果你有看到版本號，那就代表你有安裝了！如果你看到錯誤訊息，像是 <code>command not found</code>，請查看你的安裝辦法的技術文件，尋找如何分別下載 Cargo。</p>
 <h3><a class="header" href="#使用-cargo-建立專案" id="使用-cargo-建立專案">使用 Cargo 建立專案</a></h3>
-<p>讓我們來用 Cargo 建立一個專案，並來比較他和我們原本的「Hello, world!」專案有什麼差別。請回到你的 <em>projects</em>  目錄（或者任何你決定存放程式碼的地方），然後在任何作業系統上輸入：</p>
+<p>讓我們來用 Cargo 建立一個專案，並來比較它和我們原本的「Hello, world!」專案有什麼差別。請回到你的 <em>projects</em>  目錄（或者任何你決定存放程式碼的地方），然後在任何作業系統上輸入：</p>
 <pre><code class="language-console">$ cargo new hello_cargo
 $ cd hello_cargo
 </code></pre>
@@ -447,7 +447,7 @@ edition = &quot;2018&quot;
 </code></pre>
 <p><span class="caption">範例 1-2：用 <code>cargo new</code> 產生的 <em>Cargo.toml</em></span></p>
 <p>此檔案用的是 <a href="https://toml.io"><em>TOML</em></a><!-- ignore --> （<em>Tom’s Obvious, Minimal Language</em>）格式，這是 Cargo 配置文件的格式。</p>
-<p>第一行的 <code>[package]</code> 是一個段落（section）標題，說明以下的陳述語句會配置這個套件。隨著我們加入更多資訊到此文件，我們也會加上更多段落。</p>
+<p>第一行的 <code>[package]</code> 是一個段落（section）標題，說明以下的陳述式（statement）會配置這個套件。隨著我們加入更多資訊到此文件，我們也會加上更多段落。</p>
 <p>接下來四行就是 Cargo 編譯你的程式所需的配置資訊：名稱、版本、誰寫的以及哪個 Rust <code>edition</code> 會用到。Cargo 會透過環境取得你的名字和電子郵件資訊，所以要是資訊不對的話，請現在編輯然後儲存檔案。我們會在附錄 E 介紹什麼是 <code>edition</code>。</p>
 <p>最後一行 <code>[dependencies]</code> 是用來列出你的專案會用到哪些依賴的段落。在 Rust 中，程式碼套件會被稱爲 <em>crates</em>。我們在此專案還不需要任何其他 crate。但是我們會在第二章開始用到，屆時我們會再來介紹。</p>
 <p>現在請開啟 <em>src/main.rs</em> 來看看：</p>
@@ -457,8 +457,8 @@ edition = &quot;2018&quot;
 }
 </code></pre></pre>
 <p>Cargo 預設會爲你產生一個「Hello, world!」程式，就像我們範例 1-1 寫得一樣！目前我們之前寫的專案與 Cargo 產生的程式碼不同的地方在於 Cargo 將程式碼放在 <em>src</em> 目錄底下，而且我們還有一個 <em>Cargo.toml</em> 配置文件在根目錄。</p>
-<p>Cargo 預期你的原始文件都會放在 <em>src</em> 目錄底下。專案的根目錄是用來放 README 文件、授權條款、配置文件以及其他與你的程式碼不相關的文件。使用 Cargo 能夠幫助你組織你的專案，讓一切井然有序。</p>
-<p>如果你的專案還沒開始使用 Cargo 的話，像是我們剛剛寫得「Hello, world!」專案，你只要將程式碼移入 <em>src</em> 然後產生正確的 <em>Cargo.toml</em> 文件，就可以將它轉換成能夠使用 Cargo 的專案。</p>
+<p>Cargo 預期你的原始檔案都會放在 <em>src</em> 目錄底下。專案的根目錄是用來放 README 檔案、授權條款、配置檔案以及其他與你的程式碼不相關的檔案。使用 Cargo 能夠幫助你組織你的專案，讓一切井然有序。</p>
+<p>如果你的專案還沒開始使用 Cargo 的話，像是我們剛剛寫的「Hello, world!」專案，你只要將程式碼移入 <em>src</em> 然後產生正確的 <em>Cargo.toml</em> 檔案，就可以將它轉換成能夠使用 Cargo 的專案。</p>
 <h3><a class="header" href="#建構並執行-cargo-專案" id="建構並執行-cargo-專案">建構並執行 Cargo 專案</a></h3>
 <p>現在讓我們看看用 Cargo 產生的「Hello, world!」程式在建構和執行時有什麼差別！請在你的 <em>hello_cargo</em> 目錄下輸入以下命令來建構專案：</p>
 <pre><code class="language-console">$ cargo build
@@ -483,25 +483,25 @@ Hello, world!
      Running `target/debug/hello_cargo`
 Hello, world!
 </code></pre>
-<p>Cargo 還提供一道命令 <code>cargo check</code>，此命令會快速檢查你的程式碼，確保它能編譯不過不會產生執行檔。：</p>
+<p>Cargo 還提供一道命令 <code>cargo check</code>，此命令會快速檢查你的程式碼，確保它能編譯通過但不會產生執行檔：</p>
 <pre><code class="language-console">$ cargo check
    Checking hello_cargo v0.1.0 (file:///projects/hello_cargo)
     Finished dev [unoptimized + debuginfo] target(s) in 0.32 secs
 </code></pre>
-<p>爲啥你會不想要產生執行檔呢？這是因爲 <code>cargo check</code> 省略了產生執行檔的步驟，所以它執行的速度比 <code>cargo build</code> 還來的快。如果你在寫程式時需要持續檢查的話，使用 <code>cargo check</code> 可以加快整體過程！所以許多 Rustaceans 都會在寫程式的過程中時不時執行 <code>cargo check</code> 來確保它能編譯。最後當他們準備好要使用執行檔時，才會用 <code>cargo build</code>。</p>
+<p>爲何你會不想要產生執行檔呢？這是因爲 <code>cargo check</code> 省略了產生執行檔的步驟，所以它執行的速度比 <code>cargo build</code> 還來的快。如果你在寫程式時需要持續檢查的話，使用 <code>cargo check</code> 可以加快整體過程！所以許多 Rustaceans 都會在寫程式的過程中時不時執行 <code>cargo check</code> 來確保它能編譯。最後當他們準備好要使用執行檔時，才會用 <code>cargo build</code>。</p>
 <p>讓我們來回顧我們目前學到的 Cargo 內容：</p>
 <ul>
 <li>我們可以用 <code>cargo build</code> 建構專案。</li>
-<li>我們可以用 <code>cargo run</code> 一次建構並執行專案。</li>
+<li>我們可以用 <code>cargo run</code> 同時建構並執行專案。</li>
 <li>我們可以用 <code>cargo check</code> 建構專案來檢查錯誤，但不會產生執行檔。</li>
 <li>Cargo 會儲存建構結果在 <em>target/debug</em> 目錄底下，而不是放在與我們程式碼相同的目錄。</li>
 </ul>
 <p>使用 Cargo 還有一項好處是在任何作業系統所使用的命令都是相同的，所以到這邊開始我們不再需要特別提供 Linux 和 macOS 相對於 Windows 不同的特殊命令。</p>
 <h3><a class="header" href="#建構發佈版本release" id="建構發佈版本release">建構發佈版本（Release）</a></h3>
-<p>當你的專案正式準備好要發佈的話，你可以使用 <code>cargo build --release</code> 來最佳化編譯結果。此命令會產生執行檔到 <em>target/release</em> 而不是 <em>target/debug</em>。最佳化可以讓你的 Rust 程式碼跑得更快，不過也會讓編譯的時間變得更久。這也是爲何 Cargo 提供兩種不同的設定檔（profile）：一個用來作爲開發使用，讓你可以快速並經常重新建構；另一個用來最終產生你要給使用者運行的程式用，它通常不會需要重新建構且能盡所能地跑得越快越好。如果你要做基準化分析（benchmarking）來檢測程式運行時間的話，請確認執行的是 <code>cargo build --release</code> 並使用 <em>target/release</em> 底下的執行檔做檢測。</p>
+<p>當你的專案正式準備好要發佈的話，你可以使用 <code>cargo build --release</code> 來優化編譯結果。此命令會產生執行檔到 <em>target/release</em> 而不是 <em>target/debug</em>。優化可以讓你的 Rust 程式碼跑得更快，不過也會讓編譯的時間變得更久。這也是爲何 Cargo 提供兩種不同的設定檔（profile）：一個用來作爲開發使用，讓你可以快速並經常重新建構；另一個用來最終產生你要給使用者運行的程式用，它通常不會需要重新建構且能盡所能地跑得越快越好。如果你要做基準化分析（benchmarking）來檢測程式運行時間的話，請確認執行的是 <code>cargo build --release</code> 並使用 <em>target/release</em> 底下的執行檔做檢測。</p>
 <h3><a class="header" href="#將-cargo-視爲常規" id="將-cargo-視爲常規">將 Cargo 視爲常規</a></h3>
 <p>雖然在簡單的專案下，與 <code>rustc</code> 相比 Cargo 的確沒辦法突顯出什麼價值。但是當你的程式變得越來越複雜時，它將證明它的用途。在擁有一堆 crate 的龐大專案下，讓 Cargo 來協調你的專案會來的簡單許多。</p>
-<p>儘管 <code>hello_cargo</code> 是個小專案，但它使用了你未來的 Rust 生涯中真實情況下會用到的工具。事實上，所有存在的專案，你幾乎都可以用以下命令完成：使用 Git 下載專案、更改至專案目錄然後建構完成。</p>
+<p>儘管 <code>hello_cargo</code> 是個小專案，但它使用了你未來的 Rust 生涯中真實情況下會用到的工具。事實上，所有存在的專案，你幾乎都可以用以下命令完成：使用 Git 下載專案、移至專案目錄然後建構完成。</p>
 <pre><code class="language-console">$ git clone someurl.com/someproject
 $ cd someproject
 $ cargo build
