deploy: 99e8d41ba5844f159e4e49291ccbe2cc28d524db

--- a/appendix-03-derivable-traits.html
+++ b/appendix-03-derivable-traits.html
@@ -177,7 +177,7 @@
 <li>你能夠或不能夠實作特徵的條件</li>
 <li>需要特徵來做運算的範例</li>
 </ul>
-<p>如果你想要不同於 <code>derive</code> 屬性提供的行爲，請查閱每個特徵的<a href="../std/index.html">標準函式庫技術文件</a><!-- ignore -->來瞭解如何手動實作它們。</p>
+<p>如果你想要不同於 <code>derive</code> 屬性提供的行爲，請查閱每個特徵的<a href="https://doc.rust-lang.org/std/index.html">標準函式庫技術文件</a><!-- ignore -->來瞭解如何手動實作它們。</p>
 <p>其他在標準函式庫中定義的特徵則無法使用 <code>derive</code> 來對你的型別實作。這些特徵通常不太常有理想的預設行爲，所以會由你來決定最合理的方式來實作它們。</p>
 <p>其中一個無法推導的特徵範例就是 <code>Display</code>，這用來顯示格式化資訊給終端使用者。這應該永遠由你來決定顯示型別給終端使用者的最佳方式。型別的哪些部分應該給使用者看到？哪些部分他們會覺得是有關聯的？什麼樣的資料格式對他們最相關？Rust 編譯器並不具這樣的眼光能判斷，所以它無法爲你提供適合的預設行爲。</p>
 <p>此附錄提供的可推導的特徵列表並不是就是所有能用的特徵：函式庫也可以爲他們自己的特徵實作 <code>derive</code>，所以你可以使用 <code>derive</code> 的特徵是沒有極限的。實作 <code>derive</code> 會需要用到過程式巨集（procedural macro），這在第十九章的<a href="ch19-06-macros.html#%E5%B7%A8%E9%9B%86">「巨集」</a><!-- ignore -->段落有提到。</p>
