--- a/ch08-00-common-collections.html
+++ b/ch08-00-common-collections.html
@@ -173,7 +173,7 @@
 <li><em>Vector</em> 允許你接二連三地儲存數量不定的數值。</li>
 <li><em>字串（String）</em> 是字元的集合。我們在之前就提過 <code>String</code> 型別，本章會正式深入介紹。這是從一種通用資料結構 <em>map</em> 衍生出來的特定實作。</li>
 </ul>
-<p>想瞭解更多標準函式庫提供的集合種類的話，歡迎查閱<a href="../std/collections/index.html">技術文件</a>。</p>
+<p>想瞭解更多標準函式庫提供的集合種類的話，歡迎查閱<a href="https://doc.rust-lang.org/std/collections/index.html">技術文件</a>。</p>
 <p>我們將討論如何建立與更新 vector、字串與雜湊映射，以及它們的所長。</p>
 <blockquote>
 <ul>
