--- a/ch19-04-advanced-types.html
+++ b/ch19-04-advanced-types.html
@@ -297,14 +297,14 @@ pub trait Write {
 </span><span class="boring">use std::io;
 </span><span class="boring">
 </span><span class="boring">fn main() {
-</span><span class="boring">    println!(&quot;Guess the number!&quot;);
+</span><span class="boring">    println!(&quot;請猜測一個數字！&quot;);
 </span><span class="boring">
 </span><span class="boring">    let secret_number = rand::thread_rng().gen_range(1, 101);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;The secret number is: {}&quot;, secret_number);
 </span><span class="boring">
 </span><span class="boring">    loop {
-</span><span class="boring">        println!(&quot;Please input your guess.&quot;);
+</span><span class="boring">        println!(&quot;請輸入你的猜測數字。&quot;);
 </span><span class="boring">
 </span><span class="boring">        let mut guess = String::new();
 </span><span class="boring">
@@ -312,14 +312,14 @@ pub trait Write {
 </span><span class="boring">
 </span><span class="boring">        io::stdin()
 </span><span class="boring">            .read_line(&amp;mut guess)
-</span><span class="boring">            .expect(&quot;Failed to read line&quot;);
+</span><span class="boring">            .expect(&quot;讀取行數失敗&quot;);
 </span><span class="boring">
 </span>        let guess: u32 = match guess.trim().parse() {
             Ok(num) =&gt; num,
             Err(_) =&gt; continue,
         };
 <span class="boring">
-</span><span class="boring">        println!(&quot;You guessed: {}&quot;, guess);
+</span><span class="boring">        println!(&quot;你的猜測數字：{}&quot;, guess);
 </span><span class="boring">
 </span><span class="boring">        // --snip--
 </span><span class="boring">
